--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -1206,6 +1206,11 @@
     "description": "literals.changeText form label",
     "originalDefault": "Change text"
   },
+  "M9JbDC": {
+    "defaultMessage": "Annuleren",
+    "description": "Confirmation modal cancel button",
+    "originalDefault": "Cancel"
+  },
   "MEkGHD": {
     "defaultMessage": "Veld",
     "description": "Formio component selection label",
@@ -2140,6 +2145,11 @@
     "defaultMessage": "Er zijn problemen in deze actie: {problems}.",
     "description": "Logic action warning icon text",
     "originalDefault": "Detected some problems in this action: {problems}."
+  },
+  "gpiYPI": {
+    "defaultMessage": "Accepteren",
+    "description": "Confirmation modal confirm button",
+    "originalDefault": "Confirm"
   },
   "gqVGbb": {
     "defaultMessage": "Prefill instellen",
