--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -629,6 +629,11 @@
     "description": "Service fetch configuration modal data extraction fieldset title",
     "originalDefault": "Data extraction"
   },
+  "C2FSDV": {
+    "defaultMessage": "Documents produced in the form submission are registered with this document type, unless more fine grained configuration is available. Only document types available on the selected case type are shown.",
+    "description": "ZGW APIs registration options 'document type' helpText",
+    "originalDefault": "Documents produced in the form submission are registered with this document type, unless more fine grained configuration is available. Only document types available on the selected case type are shown."
+  },
   "C4Zn+R": {
     "defaultMessage": "Interne naam van de formulierdefinitie voor deze stap",
     "description": "Form step internal name field help text",
@@ -1311,6 +1316,11 @@
     "defaultMessage": "Zaaktype-API-resource URL in de Catalogi-API.",
     "description": "ZGW APIs registration options 'CaseType' help text",
     "originalDefault": "Case type API resource URL in the Catalogi API."
+  },
+  "NrF5vy": {
+    "defaultMessage": "Document type",
+    "description": "ZGW APIs registration options 'document type' label",
+    "originalDefault": "Document type"
   },
   "NwTdLM": {
     "defaultMessage": "Veld waar beschikbare locaties voor een afspraak komen te staan",
