--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -64,11 +64,6 @@
     "description": "Service fetch config configuration tab title",
     "originalDefault": "Configuration"
   },
-  "/vM+b5": {
-    "defaultMessage": "{description} {isPublished, select, false {<draft>(concept)</draft>} other {}}",
-    "description": "Case type option label",
-    "originalDefault": "{description} {isPublished, select, false {<draft>(not published)</draft>} other {}}"
-  },
   "01mWK2": {
     "defaultMessage": "The format(s) of the attachment(s) containing the submission details",
     "description": "Email registration options 'attachmentFormats' label",
@@ -911,6 +906,11 @@
     "description": "Form maintenance mode field label",
     "originalDefault": "Maintenance mode"
   },
+  "H7WmS4": {
+    "defaultMessage": "Plugin configuration: Camunda",
+    "description": "Camunda registration options modal title",
+    "originalDefault": "Plugin configuration: Camunda"
+  },
   "H7z8+8": {
     "defaultMessage": "Extra elements",
     "description": "StUF-ZDS registration backend options, 'extra elements' tab label",
@@ -1586,11 +1586,6 @@
     "description": "All Submissions Removal Limit field label",
     "originalDefault": "All Submissions Removal Limit"
   },
-  "UOofxD": {
-    "defaultMessage": "{omschrijving} {isPublished, select, false {<draft>(concept)</draft>} other {}}",
-    "description": "Document type option label",
-    "originalDefault": "{omschrijving} {isPublished, select, false {<draft>(not published)</draft>} other {}}"
-  },
   "Uq9Hbx": {
     "defaultMessage": "-",
     "description": "Registration summary no registration backend fallback message",
@@ -1915,11 +1910,6 @@
     "description": "Incomplete Submissions Removal Limit field label",
     "originalDefault": "Incomplete Submissions Removal Limit"
   },
-  "cEALcN": {
-    "defaultMessage": "Configure options",
-    "description": "Link label to open payment provider options modal",
-    "originalDefault": "Configure options"
-  },
   "cID9dz": {
     "defaultMessage": "(complexe waarde)",
     "description": "JSON editor: complex value representation",
@@ -2055,6 +2045,11 @@
     "defaultMessage": "Zds zaaktype status code",
     "description": "StUF-ZDS registration options 'zdsZaaktypeStatusCode' label",
     "originalDefault": "Zds zaaktype status code"
+  },
+  "efsF8+": {
+    "defaultMessage": "{label} {isPublished, select, false {<draft>(concept)</draft>} other {}}",
+    "description": "Document type option label",
+    "originalDefault": "{label} {isPublished, select, false {<draft>(not published)</draft>} other {}}"
   },
   "evbysh": {
     "defaultMessage": "Variabeledefinitie",
@@ -2266,6 +2261,11 @@
     "defaultMessage": "Zaaktype",
     "description": "ZGW APIs registration options 'CaseType' label",
     "originalDefault": "Case type"
+  },
+  "ighCxq": {
+    "defaultMessage": "Plugin configuration: MS Graph",
+    "description": "MS Graph registration options modal title",
+    "originalDefault": "Plugin configuration: MS Graph"
   },
   "inhTXo": {
     "defaultMessage": "jaren",
@@ -2652,6 +2652,11 @@
     "description": "Variable table data type title",
     "originalDefault": "Data type"
   },
+  "rGLOtz": {
+    "defaultMessage": "{label} {isPublished, select, false {<draft>(concept)</draft>} other {}}",
+    "description": "Case type option label",
+    "originalDefault": "{label} {isPublished, select, false {<draft>(not published)</draft>} other {}}"
+  },
   "rQy+Yq": {
     "defaultMessage": "CSV-inzendingsbestand uploaden",
     "description": "Objects API registration: uploadSubmissionCsv label",
@@ -2701,11 +2706,6 @@
     "defaultMessage": "Enable to attach file uploads to the registration email. If set, this overrides the global default. Form designers should take special care to ensure that the total file upload sizes do not exceed the email size limit.",
     "description": "Email registration options 'attachFilesToEmail' helpText",
     "originalDefault": "Enable to attach file uploads to the registration email. If set, this overrides the global default. Form designers should take special care to ensure that the total file upload sizes do not exceed the email size limit."
-  },
-  "sQpH2P": {
-    "defaultMessage": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }",
-    "description": "Payment provider validation errors icon next to button to configure options",
-    "originalDefault": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }"
   },
   "sptpzv": {
     "defaultMessage": "Let op! Migreren naar het nieuwe configuratieformaat maakt de bestaande JSON-sjablonen leeg. Daarnaast kan je het formulier pas opslaan als alle verplichte variabelen goed gekoppeld zijn. Ben je zeker dat je wil migreren?",
