--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -69,6 +69,11 @@
     "description": "Email registration options 'attachmentFormats' label",
     "originalDefault": "The format(s) of the attachment(s) containing the submission details"
   },
+  "0EYS7D": {
+    "defaultMessage": "Objecttype",
+    "description": "Objects API prefill options 'Objecttype' label",
+    "originalDefault": "Objecttype"
+  },
   "0M2B7B": {
     "defaultMessage": "DMN-variabele",
     "description": "DMN variable label",
@@ -200,6 +205,11 @@
     "description": "Logic expression generated description",
     "originalDefault": "When {desc}"
   },
+  "3SCiQR": {
+    "defaultMessage": "Copy configuration from registration",
+    "description": "Objects API prefill options: link to show copy from registration button",
+    "originalDefault": "Copy configuration from registration"
+  },
   "3W3Px9": {
     "defaultMessage": "Nog één toevoegen",
     "description": "Button text to add extra item",
@@ -321,6 +331,11 @@
     "defaultMessage": "Sleutel",
     "description": "Variable table key title",
     "originalDefault": "Key"
+  },
+  "6qPITC": {
+    "defaultMessage": "Something went wrong while retrieving the available object types.",
+    "description": "Objects API prefill options: object type select error",
+    "originalDefault": "Something went wrong while retrieving the available object types."
   },
   "7/Bhpw": {
     "defaultMessage": "Vul eerst de naam van de vorige variabele in voor u een nieuwe toevoegt",
@@ -956,6 +971,11 @@
     "description": "Form 'BRP Personen purpose limitation header value' field label",
     "originalDefault": "BRP Personen purpose limitation header value"
   },
+  "HdRpKT": {
+    "defaultMessage": "Version",
+    "description": "Objects API prefill options 'objecttypeVersion' label",
+    "originalDefault": "Version"
+  },
   "Hfdfv2": {
     "defaultMessage": "Welke versie van de procesdefinitie moet gebruikt worden. Indien niet opgegeven dan wordt altijd de laatste versie gebruikt.",
     "description": "Camunda 'process definition version' help text",
@@ -1505,11 +1525,6 @@
     "defaultMessage": "wijzig een attribuut van een veld/component.",
     "description": "action type \"property\" label",
     "originalDefault": "change a property of a component."
-  },
-  "ScGRie": {
-    "defaultMessage": "Copying the configuration from the registration backend will clear the existing configuration. Are you sure you want to continue?",
-    "description": "Objects API prefill configuration: warning message\n              when copying the config from registration backend",
-    "originalDefault": "Copying the configuration from the registration backend will clear the existing configuration. Are you sure you want to continue?"
   },
   "ScbJK7": {
     "defaultMessage": "RSIN Organisatie",
@@ -2422,11 +2437,6 @@
     "description": "Email registration options 'emailPaymentSubject' helpText",
     "originalDefault": "Subject of the email sent to the registration backend to notify a change in the payment status."
   },
-  "kWw9qL": {
-    "defaultMessage": "Dit product wordt met inzendingen meegestuurd.",
-    "description": "ZGW APIs registration options 'product' helpText",
-    "originalDefault": "This product will be send allong form submits."
-  },
   "klKZV5": {
     "defaultMessage": "Geeft aan of een bestaande record (verkregen van de eventuele voor-invulreferentie) bijgewerkt moet worden in plaats van een nieuw object aan te maken. Als er geen bestaand object is, dan wordt een nieuwe aangemaakt.",
     "description": "Objects API registration: updateExistingObject helpText",
@@ -2471,6 +2481,11 @@
     "defaultMessage": "Objecttyperesource-URL in de Objecttypen-API. Wanneer dit ingesteld is, dan wordt een object van dit type aangemaakt en aan de zaak gerelateerd.",
     "description": "ZGW APIs registration options 'objecttype' help text",
     "originalDefault": "URL to the object type in the objecttypes API. If provided, an object will be created and a case object relation will be added to the case."
+  },
+  "m83ECr": {
+    "defaultMessage": "Copying the configuration from the registration backend will clear the existing configuration. Are you sure you want to continue?",
+    "description": "Objects API prefill configuration: warning message when copying the config from registration backend",
+    "originalDefault": "Copying the configuration from the registration backend will clear the existing configuration. Are you sure you want to continue?"
   },
   "mCHS+l": {
     "defaultMessage": "Je hebt een catalogus geselecteerd - de hier ingestelde documenttype-URLs worden genegeerd.",
@@ -2576,6 +2591,11 @@
     "defaultMessage": "Vink aan om de inhoud toe te voegen aan de PDF die mensen op het eind kunnen downloaden.",
     "description": "Include confirmation page content in PDF",
     "originalDefault": "Whether to include the content of the confirmation page in the PDF."
+  },
+  "oqv4fM": {
+    "defaultMessage": "The prefill values will be taken from an object of the selected type.",
+    "description": "Objects API prefill options 'Objecttype' helpText",
+    "originalDefault": "The prefill values will be taken from an object of the selected type."
   },
   "oxYXJX": {
     "defaultMessage": "Geeft aan hoe voltooide inzendingen worden opgeschoond na de bewaartermijn. Laat leeg om de waarde van de algemene configuratie te gebruiken.",
