--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -109,6 +109,11 @@
     "description": "Camunda complex process variables confirm button",
     "originalDefault": "Confirm"
   },
+  "1Hb/pK": {
+    "defaultMessage": "This is used to perform validation to verify that the authenticated user is the owner of the object.",
+    "description": "Objects API registration: authAttributePath helpText",
+    "originalDefault": "This is used to perform validation to verify that the authenticated user is the owner of the object."
+  },
   "1HfdUc": {
     "defaultMessage": "The API group specifies which objects and objecttypes services to use.",
     "description": "Objects API group field help text",
@@ -2508,6 +2513,11 @@
     "defaultMessage": "URL to the object type in the objecttypes API. If provided, an object will be created and a case object relation will be added to the case.",
     "description": "ZGW APIs registration options 'objecttype' help text",
     "originalDefault": "URL to the object type in the objecttypes API. If provided, an object will be created and a case object relation will be added to the case."
+  },
+  "lu7yMK": {
+    "defaultMessage": "Path to auth attribute (e.g. BSN/KVK) in objects",
+    "description": "Objects API registration: authAttributePath label",
+    "originalDefault": "Path to auth attribute (e.g. BSN/KVK) in objects"
   },
   "m83ECr": {
     "defaultMessage": "Copying the configuration from the registration backend will clear the existing configuration. Are you sure you want to continue?",
