:children_crossing: [#4606] Present available role types in a dropdown
Instead of having to enter the values in a text box, you can now
select them in a dropdown.

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -554,6 +554,11 @@
     "description": "ZGW APIs registration options 'zaakVertrouwelijkheidaanduiding' label",
     "originalDefault": "Confidentiality"
   },
+  "AdyBdF": {
+    "defaultMessage": "Something went wrong while retrieving the available role types defined in the selected case. Please check that the services in the selected API group are configured correctly.",
+    "description": "ZGW APIs registrations options: role type error",
+    "originalDefault": "Something went wrong while retrieving the available role types defined in the selected case. Please check that the services in the selected API group are configured correctly."
+  },
   "AtBVAV": {
     "defaultMessage": "Confirm",
     "description": "Form definition select confirm button",
