--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -559,6 +559,11 @@
     "description": "ZGW APIs registration options 'zaakVertrouwelijkheidaanduiding' label",
     "originalDefault": "Confidentiality"
   },
+  "AdyBdF": {
+    "defaultMessage": "Something went wrong while retrieving the available role types defined in the selected case. Please check that the services in the selected API group are configured correctly.",
+    "description": "ZGW APIs registrations options: role type error",
+    "originalDefault": "Something went wrong while retrieving the available role types defined in the selected case. Please check that the services in the selected API group are configured correctly."
+  },
   "AtBVAV": {
     "defaultMessage": "Bevestigen",
     "description": "Form definition select confirm button",
