:recycle: [#4398] Refactor the TargetPathSelect component
The TargetPathSelect component is now decoupled from its possible
FieldArray parent, and the option label display is incorporated in
the component itself so that options no longer need to be pre-processed.

On top of that, it's now refactored to be based on react-select for
consistency in the UI, and separate stories have been added so we can
do (visual) regression testing/isolated development.

We use this component in a number of places now:

* the path to the auth attribute (no variablesMapping parent context),
  used in registration and prefill plugins for the Objects API
* the path for the generic Object Types V2 registration mapping, here
  a variablesMapping parent container/context is relevant and different
  form state management semantics apply
* the path to specialized AddressNL subfield mappings - a parent is
  relevant, but not within a bigger variable mapping so we can use the
  standard field assignment semantics of Formik.

--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -3050,6 +3050,11 @@
     "description": "Price variable label",
     "originalDefault": "Variable"
   },
+  "xBb5YI": {
+    "defaultMessage": "Select an object type and version before you can pick a source path.",
+    "description": "Object type target path selection for auth attribute message for missing options because no object type has been selected.",
+    "originalDefault": "Select an object type and version before you can pick a source path."
+  },
   "xJBMaf": {
     "defaultMessage": "Sjabloon bevestigingspagina",
     "description": "Submission confirmation fieldset title",
